- Add volblocksize on ZFS volume creation.
- Add volmode on ZFS volume.
- Remove usesendfile on CIFS/SMB.
- Remove legacy disk aliases such as /dev/ad0.
- Change DSA private key to RSA private key on SSH service.
- Change ZFS pool info reflected from zpool list.
- Change Store DOS attributes to OFF by default.
- Change var/tmpfs size to 512MB/256MB.
- Upgrade bash 4.3 to patch 42.
- Upgrade isboot to 0.2.13.
- Upgrade tzdata to 2015g.
- Upgrade mDNSResponder to 576.30.4.
- Upgrade samba to 4.2.5.
- Upgrade dmidecode to 3.0.
- Upgrade nano to 2.4.3.
- Upgrade iperf3 to 3.1.1.
- Upgrade dialog to 1.2-20150920.
- Upgrade xmd to 0.5.
- Upgrade tmux to 2.1.
- Upgrade php to 5.6.16.
- Upgrade syncthing to 0.12.6.
- Upgrade lighttpd to 1.4.38.

Fixes:
- Fix duplicate syncthing account when fresh install by 2067.
- Fix broken menu options livecd/liveusb.
- Fix syncthing causes Illegal instruction on old i386. (don't use SSE2)
- Fix VirtualBox cannot be connected via noVNC if using HTTPS.
- Fix bridged member cannot be set IP address.
- Fix minidlna log file location mismatch. (ticket #255)
- Fix smbclient use NT1 instead of SMB3/SMB2. (ticket #236)
- Fix cannot execute samba if time server is empty.
- Fix missing loader parameters on fresh installation. (full only)
- Fix NTFS is not detected on Import disks.
- Fix SSL certificate link. (ticket #239)
- Fix NFS share network. (ticket #238)
- Fix boot time ntpdate fail when AD DC enabled.
- Fix wrong path in Samba AD. (ticket #228, #232)
- Undefined symbol "av_find_stream_info" in fuppes/libmetadata_libavformat.so.
- AFP share is not advised.
- Fix webserver user logins.
- Fix wrong path ticket 228.

Note:
- iperf2 has been replaced for iperf3 because of inconsistent results for UDP above 2Gbps.
- iperf3 is not backwards compatible with iperf2.x.

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.