@@ -37,6 +37,7 @@ Changes:
 - Change ZFS pool info reflected from zpool list.
 - Change Store DOS attributes to OFF by default.
 - Change var/tmpfs size to 512MB/256MB.
+- Chaneg empty bridge is allowd.
 - Upgrade bash 4.3 to patch 42.
 - Upgrade isboot to 0.2.13.
 - Upgrade tzdata to 2015g.
